# phd

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
data/: .gitignore  README.md
data/raw/: README.md
notebooks/: experiment_template.ipynb  train-tree-models.ipynb
notes/: README.md  mlflow.md
operations/: Dockerfile.pyg-pointnet  README.md  datasphere-dummy.yaml  datasphere-synthetic-only.yaml  requirements.txt
src/: __init__.py  clouds.py  lmf.py  matching.py  metrics.py  utils.py
src/datasets/: __init__.py  individual_trees.py  synthetic_forest.py  synthetic_forest_colored.py  synthetic_forest_rgb.py  utils.py
src/experiments/: dummy.py  sf_rgb_mbf_patch.py  synthetic_forest_colored_only.py  synthetic_forest_colored_patch_only.py  synthetic_forest_only.py
src/losses/: __init__.py  reverse_distance_weighted.py
src/models/pointnet/: __init__.py  classifier.py  semantic_segmentation.py  tree_segmentation.py  utils.py
src/scripts/: apply_model_sliding_window.py  find_trees_in_field_inventory.py  process_lysva_plot_clouds.py  process_tree_clouds.py
src/transforms/: __init__.py  per_tree.py
src/visualization/: clouds.py
tests/: conftest.py  test_clouds.py  test_lmf.py  test_matching.py  test_utils.py
tests/models/: test_pointnet.py  utils.py
