[tool.poetry]
name = "phd"
version = "0.1.0"
description = ""
authors = ["Ivan Dubrovin <books.booksovich@yandex.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
shapely = "^2.0.3"
rasterio = "^1.3.9"
laspy = "^2.5.3"
kaggle = "^1.6.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
