[tool.poetry]
name = "phd"
version = "0.1.0"
description = ""
authors = ["Ivan Dubrovin <books.booksovich@yandex.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
shapely = "^2.0.3"
rasterio = "^1.3.9"
geopandas = "^0.14.3"
laspy = "^2.5.3"
kaggle = "^1.6.6"
scikit-learn = "^1.4.2"
mlflow = "^2.12.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchmetrics = "^1.3.1"
lightning = "^2.2.1"
torchinfo = "^1.8.0"
cartopy = "^0.23.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."

[tool.ruff.lint]
select = [
    "E",     # Error
    "F",     # Pyflakes
    "ARG",   # flake8-unused-arguments
    "W",     # Warning
    "I",     # isort
    "Q",     # flake8-quotes
    "N",     # pep8-naming
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "PD",    # pandas-vet
    "NPY",   # NumPy-specific rules
    "PERF",  # Perflint
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
