[project]
name = "phd"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Dubrovin", email = "books.booksovich@yandex.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "scipy>=1.14.0",
    "shapely>=2.0.4",
    "rasterio>=1.3.10",
    "geopandas>=1.0.1",
    "scikit-learn>=1.5.1",
    "mlflow>=2.16.0",
    "torch>=2.4.1",
    "torchvision>=0.18.1",
    "torchmetrics>=1.4.0.post0",
    "lightning>=2.4.0",
    "torchinfo>=1.8.0",
    "cartopy>=0.23.0",
    "python-dotenv>=1.0.1",
    "laspy>=2.5.4",
    "torch-geometric>=2.5.3",
    "h5py>=3.11.0",
    "torch-cluster @ https://data.pyg.org/whl/torch-2.4.0%2Bcpu/torch_cluster-1.6.3-cp310-cp310-macosx_10_9_universal2.whl ; platform_system == 'Darwin'",
    "torch-scatter @ https://data.pyg.org/whl/torch-2.4.0%2Bcpu/torch_scatter-2.1.2-cp310-cp310-macosx_10_9_universal2.whl ; platform_system == 'Darwin'",
    "lazrs>=0.6.1",
    "kaggle>=1.6.17",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "ipykernel>=6.29.5",
    "datasphere>=0.7.4",
    "debugpy>=1.8.2",
]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "ARG",
    "W",
    "I",
    "D",
    "Q",
    "N",
    "RET",
    "SIM",
    "PD",
    "NPY",
    "PERF",
    "PL",
    "TRY",
    "FURB",
    "RUF",
]

ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/experiments/*" = ["N812"]

[tool.ruff.lint.pydocstyle]
convention = "google"
